--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ theme = "hyde-hyde"
     author = "Author"
     title = "Miguel Acevedo"
     # description = "..."
-    authorimage = "miguel.jpeg"
+    authorimage = "/miguel.jpeg"
     dateformat = "Jan 2, 2020"
 
     # https://highlightjs.org
