Added new portfolio items

--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ theme = "hyde-hyde"
 [params.social]
     github = "miguel-acevedo"
     linkedin = "miguel-acevedo-171207133"
-    twitter = "miglets80"
+    twitter = "miguelsanchez9l"
     email = "mhacevedo@ucdavis.edu"
     # gravatar = "mhacevedo@ucdavis.edu"
 
